--- a/lib/tasks/volte/liquid_views/search--list.liquid
+++ b/lib/tasks/volte/liquid_views/search--list.liquid
@@ -18,29 +18,164 @@ partial: false
     <h4>Filter by:</h4>
     <form class="form-horizontal no-inheritance" data-search-form="filters">
       <ul>
-        {% assign attributes = searcher.filterable_custom_attributes | reverse %}
-        {% for ca in attributes %}
-        <li {{ ca.wrapper_html_options }}>
-          <fieldset>
-            <legend>{{ ca.label }}</legend>
-            <select {{ ca.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ ca.name }}][]" id="">
-              <option value="">Please select</option>
-              {% for opt in ca.valid_values %}
-                <option value="{{ opt }}" {% if params['lg_custom_attributes']['item_type'][0] == opt %}selected{% endif %}>{{ opt }}</option>
-              {% endfor %}
-            </select>
-          </fieldset>
-        </li>
-        {% endfor %}
+
+        {% cache_for searcher.filterable_custom_attributes_hash %}
+          {% assign attributes = searcher.filterable_custom_attributes_hash %}
+
+          <li {{ attributes.item_type.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.item_type.label }}</legend>
+              <select {{ attributes.item_type.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.item_type.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.item_type.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['item_type'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.item_style_bag.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.item_style_bag.label }}</legend>
+              <select {{ attributes.item_style_bag.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.item_style_bag.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.item_style_bag.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['item_style_bag'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.item_style_milinery.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.item_style_milinery.label }}</legend>
+              <select {{ attributes.item_style_milinery.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.item_style_milinery.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.item_style_milinery.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['item_style_milinery'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.milinery_size.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.milinery_size.label }}</legend>
+              <select {{ attributes.milinery_size.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.milinery_size.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.milinery_size.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['milinery_size'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.dress_size.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.dress_size.label }}</legend>
+              <select {{ attributes.dress_size.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.dress_size.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.dress_size.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['dress_size'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.designer_name.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.designer_name.label }}</legend>
+              <select {{ attributes.designer_name.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.designer_name.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.designer_name.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['designer_name'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.color.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.color.label }}</legend>
+              <select {{ attributes.color.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.color.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.color.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['color'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.dress_length.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.dress_length.label }}</legend>
+              <select {{ attributes.dress_length.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.dress_length.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.dress_length.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['dress_length'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.outerwear_size.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.outerwear_size.label }}</legend>
+              <select {{ attributes.outerwear_size.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.outerwear_size.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.outerwear_size.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['outerwear_size'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.item_style_accessories.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.item_style_accessories.label }}</legend>
+              <select {{ attributes.item_style_accessories.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.item_style_accessories.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.item_style_accessories.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['item_style_accessories'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.item_style_dress.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.item_style_dress.label }}</legend>
+              <select {{ attributes.item_style_dress.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.item_style_dress.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.item_style_dress.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['item_style_dress'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+
+          <li {{ attributes.item_style_outerwear.wrapper_html_options }}>
+            <fieldset>
+              <legend>{{ attributes.item_style_outerwear.label }}</legend>
+              <select {{ attributes.item_style_outerwear.input_html_options }} class="form-control custom-select" name="lg_custom_attributes[{{ attributes.item_style_outerwear.name }}][]" id="">
+                <option value="">Please select</option>
+                {% for opt in attributes.item_style_outerwear.valid_values %}
+                  <option value="{{ opt }}" {% if params['lg_custom_attributes']['item_style_outerwear'][0] == opt %}selected{% endif %}>{{ opt }}</option>
+                {% endfor %}
+              </select>
+            </fieldset>
+          </li>
+        {% endcache_for %}
+
         <li>
           <fieldset>
-            <legend>Location</legend>
+            <legend>Item Location</legend>
             <input type="text" name="item_location_city" id="item_location_city" placeholder="City" />
           </fieldset>
         </li>
         <li>
           <fieldset>
-            <legend>Availability</legend>
+            <legend>Item Availability</legend>
             <ul>
               <li>
                 <label class="availability-filter datetimepicker">
